--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
     "mongodb": "^6.10.0",
-    "next": "14.2.13",
-    "react": "^18",
-    "react-dom": "^18"
+    "next": "^15.0.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
