--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,2 @@
-DB_ADDRESS = mongodb://root:example@localhost:27017/
+DB_ADDRESS=mongodb+srv://root:myPassword123@cluster0.hunn6.mongodb.net/?retryWrites=true&w=majority
+WEATHER_API_KEY=a5bec305169942fe99f142501242110
